--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>메인-League of Legends</title>
   </head>
   <body>
-    <p><h1><a href="index.html">리그오브레전드</a></h1></p>
+    <p><h1><a href="index.html">리그 오브 레전드</a></h1></p>
     <p style="margin-top:40px;">
       <ol>
         <h2><li><a href="1.html">개요 및 게임 정보</a></li></h2>
@@ -14,7 +14,8 @@
       </ol>
     </p>
     <p>
-
+      <img src="main.png" alt="기본 정보" title="기본 정보">
+      리그 오브 레전드의 세계로 여러분을 초대합니다.
     </p>
   </body>
 </html>
