--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </ol>
     </p>
     <p>
-      <img src="main.png" alt="기본 정보" title="기본 정보">
+      <img src="main.png" alt="기본 정보" title="기본 정보"><br>
       리그 오브 레전드의 세계로 여러분을 초대합니다.
     </p>
   </body>
